fix uneven layout for main projects page

--- a/src/css/hover-effect.css
+++ b/src/css/hover-effect.css
@@ -125,6 +125,10 @@
     margin: 0;
   }
 
+  .wide .hover-link:nth-child(even) {
+    margin: 30px 0 -30px 0;
+  }
+
   .grid .hover-link:nth-child(3n-1) {
     margin: 30px 0 -30px 0;
   }
